--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aad3b10
-	trimbase = 
+	trim = crsm_slam
+	base = d1b9980
+	trimbase = aad3b10
 	parent = upstream
 	previous = 0d29730
