--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1b9980
+	base = fbf5142
 	trimbase = 
 	parent = release/hydro/crsm_slam
-	previous = 
+	previous = d1b9980
