--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 201c8da
+	base = 0a3f60d
 	trimbase = 
 	parent = debian/hydro/crsm_slam
-	previous = 
+	previous = 201c8da
