--- a/crsm_slam/package.xml
+++ b/crsm_slam/package.xml
@@ -1,12 +1,12 @@
 <package>
 	<name>crsm_slam</name>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<description>ROS package for the CRSM SLAM (Critical Rays Scan Match Simultaneous Localization And Mapping)</description>
 	<maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer> 
 	
 	<license>GPLv3.0</license>
 	
-	<url type="website">http://ros.org/wiki/crsm-slam-ros-pkg</url>
+	<url type="website">http://ros.org/wiki/crsm_slam</url>
 	
 	<author>Manos Tsardoulias</author>
 	<buildtool_depend>catkin</buildtool_depend>
@@ -15,11 +15,13 @@
 	<build_depend>tf</build_depend> 
 	<build_depend>nav_msgs</build_depend> 
 	<build_depend>geometry_msgs</build_depend> 
+	<build_depend>sensor_msgs</build_depend> 
 	
 	<run_depend>roscpp</run_depend> 
 	<run_depend>tf</run_depend> 
 	<run_depend>nav_msgs</run_depend> 
 	<run_depend>geometry_msgs</run_depend> 
+	<run_depend>sensor_msgs</run_depend> 
 	
 	<export>
 	</export>
