--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = 05000fe
-	trimbase = 
+	base = f3d3305
+	trimbase = 05000fe
 	parent = upstream
 	previous = b961e51
