--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = cb54cee
-	trimbase = 
+	base = 95fd5c5
+	trimbase = cb54cee
 	parent = upstream
 	previous = f94a76d
