--- a/crsm_slam/CMakeLists.txt
+++ b/crsm_slam/CMakeLists.txt
@@ -49,6 +49,12 @@ target_link_libraries(crsm_slam_node
 		      crsm_slam
 )
 
+# Install headers
+install(DIRECTORY include
+   DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+   FILES_MATCHING PATTERN "*.h"
+)
+
 # Install files
 install(DIRECTORY launch config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
