--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = 3c6a165
-	trimbase = 
+	base = 2485f45
+	trimbase = 3c6a165
 	parent = upstream
 	previous = 4d63999
