--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = c74cf37
-	trimbase = 
+	base = 2e0b3ed
+	trimbase = c74cf37
 	parent = upstream
 	previous = 4d63999
