Imported upstream version '1.0.1' of 'upstream'

--- a/crsm_slam/CMakeLists.txt
+++ b/crsm_slam/CMakeLists.txt
@@ -50,7 +50,7 @@ target_link_libraries(crsm_slam_node
 )
 
 # Install headers
-install(DIRECTORY include
+install(DIRECTORY include/
    DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
    FILES_MATCHING PATTERN "*.h"
 )
