--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = a01c5eb
-	trimbase = 
+	base = 7fa50e5
+	trimbase = a01c5eb
 	parent = upstream
 	previous = 7aee656
