Imported upstream version '1.0.2' of 'upstream'

--- a/crsm_slam/CMakeLists.txt
+++ b/crsm_slam/CMakeLists.txt
@@ -18,6 +18,10 @@ catkin_package(
       geometry_msgs
       sensor_msgs
     INCLUDE_DIRS include
+    LIBRARIES
+      crsm_laser
+      crsm_map
+      crsm_slam
 )
 
 include_directories(include
