--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = a283810
-	trimbase = 
+	base = b11f5a5
+	trimbase = a283810
 	parent = upstream
 	previous = bbeb5ae
