Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0": ["Manos Tsardoulias", "etsardou@gmail.com"], "1.0.1": ["Manos Tsardoulias", "etsardou@gmail.com"]}
+{"1.0.0": ["Manos Tsardoulias", "etsardou@gmail.com"], "1.0.1": ["Manos Tsardoulias", "etsardou@gmail.com"], "1.0.2": ["Manos Tsardoulias", "etsardou@gmail.com"]}
