Imported upstream version '1.0.3' of 'upstream'

--- a/crsm_slam/config/crsm_slam/crsm_slam_parameters.yaml
+++ b/crsm_slam/config/crsm_slam/crsm_slam_parameters.yaml
@@ -3,7 +3,7 @@
 occupancy_grid_publish_topic : /slam/occupancyGridMap
 robot_trajectory_publish_topic : /robot_trajectory
 trajectory_publisher_frame_id : map
-laser_subscriber_topic : /slam/scan
+laser_subscriber_topic : /laser/scan
 
 #~ Tf frames 
 
