--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = a59118c
-	trimbase = 
+	base = 27b7da3
+	trimbase = a59118c
 	parent = upstream
 	previous = ff72562
