--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = crsm_slam
-	base = 29ebde8
-	trimbase = 
+	base = a241a84
+	trimbase = 29ebde8
 	parent = upstream
 	previous = ff72562
