--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 61bdc45
-	trimbase = 
+	trim = crsm_slam
+	base = 6c6662e
+	trimbase = 61bdc45
 	parent = upstream
 	previous = ff72562
