--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c6662e
+	base = f6087bb
 	trimbase = 
 	parent = release/indigo/crsm_slam
-	previous = 
+	previous = 6c6662e
