--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0647657
+	base = 8bed88f
 	trimbase = 
 	parent = debian/indigo/crsm_slam
-	previous = 
+	previous = 0647657
