--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1b6b824
+	base = 4675a80
 	trimbase = 
 	parent = rpm/indigo/crsm_slam
-	previous = 
+	previous = 1b6b824
